# pydf-annotations

./: mkdocs.yml  pyproject.toml  test_config.txt
docs/: index.md
docs/api/: cfg.md  note_extractor.md  pydf_annotations.md
docs/stylesheet/: extra.css
note_extractor/: cfg.py  noteextractor.py  utils.py
pydf_annotations/: __init__.py  cfg.py  pydf_annotations.py  pydfannots.py  utils.py
tests/: test_cfg.py  test_noteextractor.py  test_utils.py
tests/resources/: cfg_incomplete.json  cfg_incomplete_save.json
