[tool.poetry]
name = "pydf-annotations"
version = "0.1.0"
description = ""
authors = ["pho-souza <pedroka196@gmail.com>"]
readme = "README.md"
packages = [{include = "pydf_annotations"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
