[tool.poetry]
name = "pydf-annotations"
version = "0.1.0"
description = ""
authors = ["pho-souza <pedroka196@gmail.com>"]
readme = "README.md"
packages = [{include = "pydf_annotations"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.11.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.14"
mkdocstrings-python = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
